--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.2",
     "react": "^16.8.1",
+    "react-coverflow": "^0.2.18",
     "react-dom": "^16.8.1",
+    "react-responsive-carousel": "^3.1.47",
     "react-scripts": "2.1.5"
   },
   "scripts": {
